# urbanki-sovia

./: .gitignore  LizenzenLibs.md  README.md  pyproject.toml
data/input/dachumbau/: Dachumbau_gruen.csv  manuelle_koordinaten_epsg25832.csv
data/input/label_tasks/: first_training_tasks.csv
data/input/labeled_data/: second_labels.csv
data/input/rvr_gebiet/: rvr_gebiet.dbf  rvr_gebiet.qix  rvr_gebiet.shp  rvr_gebiet.shx
data/input/trained_models/saved_states/: first_training.pth
data/input/training_data/: first_training.csv  second_training.csv
labelstudio/: labelstudio_interface.html
src/sovia/app/: main.py
src/sovia/app/infra/: DatabaseConnector.py  actions.py
src/sovia/app/pages/: bereich_untersuchen.py  gebiete_bearbeiten.py  hausumringe_upload.py
src/sovia/app/utils/: file_handling.py
src/sovia/data_preparation/: export_data_from_labelingstudio.py  get_labeling_tasks.py  recreate_database.py  utils.py  zero-shot-classification.py
src/sovia/model/: SiameseNetworkTrainingLoop.py  SiameseNetworkTrainingLoop2.py  daten_klassifizieren.py  image_loader.py
